--- a/Data Modeling with Cassandra/Cassandra.ipynb
+++ b/Data Modeling with Cassandra/Cassandra.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,13 +9,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## PLEASE RUN THE FOLLOWING CODE FOR PRE-PROCESSING THE FILES"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -39,6 +34,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -74,6 +70,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -142,37 +139,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
-    "\n",
-    "## Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
-    "- artist \n",
-    "- firstName of user\n",
-    "- gender of user\n",
-    "- item number in session\n",
-    "- last name of user\n",
-    "- length of the song\n",
-    "- level (paid or free song)\n",
-    "- location of the user\n",
-    "- sessionId\n",
-    "- song title\n",
-    "- userId\n",
-    "\n",
-    "The image below is a screenshot of what the denormalized data should appear like in the <font color=red>**event_datafile_new.csv**</font> after the code above is run:<br>\n",
-    "\n",
-    "<img src=\"images/image_event_datafile_new.jpg\">"
+    "# Part II. Apache Cassandra coding portion"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Begin writing your Apache Cassandra code in the cells below"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -187,7 +162,7 @@
    "source": [
     "# This should make a connection to a Cassandra instance your local machine \n",
     "# (127.0.0.1)\n",
-    "\n",
+    "    \n",
     "from cassandra.cluster import Cluster\n",
     "cluster = Cluster(['127.0.0.1'])\n",
     "\n",
@@ -196,6 +171,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -208,7 +184,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Create a Keyspace \n",
     "try:\n",
     "    session.execute(\"\"\"\n",
     "    CREATE KEYSPACE IF NOT EXISTS udacity \n",
@@ -221,6 +196,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -233,7 +209,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n",
     "try:\n",
     "    session.set_keyspace('udacity')\n",
     "except Exception as e:\n",
@@ -241,27 +216,31 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
+    "#### Question 1\n",
+    "Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
+    "\n",
+    "#### Answer\n",
+    "- For this question, we want to retrieve data based on two filtering conditions: sessionId and itemInSession. \n",
+    "Therefore, we create a new table called event_by_session_item.\n",
+    "\n",
+    "- The primary key is defined as (session_id, itemInSession). \n",
+    "\n",
+    "- This choice allows efficient querying based on these two columns.\n",
+    "Since we need to filter by session_id and itemInSession, we make them the primary key columns. \n",
+    "\n",
+    "- We will also include artist, song title and song length because the question is looking for those information"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create queries to ask the following three questions of the data\n",
-    "\n",
-    "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
-    "\n",
-    "\n",
-    "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
-    "    \n",
-    "\n",
-    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "\n",
-    "\n"
+    "#### Create Table"
    ]
   },
   {
@@ -270,8 +249,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
-    "## sessionId = 338, and itemInSession = 4\n",
     "query = \"CREATE TABLE IF NOT EXISTS event_by_session_item \"\n",
     "query = query + \"(session_id int, itemInSession int, artist text, song text, length float, PRIMARY KEY (session_id, itemInSession))\"\n",
     "\n",
@@ -282,6 +259,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Insert data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
@@ -289,26 +274,23 @@
    },
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
-    "\n",
     "with open(file, encoding = 'utf8') as f:\n",
-    "    csvreader = csv.reader(f)\n",
+    "    csvreader = csv.reader  (f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
     "        query = \"INSERT INTO event_by_session_item (session_id, itemInSession, artist, song, length)\"\n",
     "        query = query + \" VALUES (%s, %s, %s, %s, %s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
+    "        ### the index is based on the position of the columns\n",
     "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Do a SELECT to verify that the data have been inserted into each table"
+    "#### Query the data"
    ]
   },
   {
@@ -327,7 +309,6 @@
     }
    ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
     "query = \"SELECT artist, song, length FROM event_by_session_item WHERE session_id = 338 AND itemInSession = 4;\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
@@ -339,10 +320,27 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
+    "### Question 2\n",
+    "Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "\n",
+    "\n",
+    "### Answer \n",
+    "- For this question, we want to retrieve data based on filtering conditions for user_id and session_id, and we also want the results to be sorted by itemInSession.\n",
+    "- We create a new table called event_by_user_session.\n",
+    "- The primary key is defined as ((user_id, session_id), itemInSession). This primary key allows us to filter data based on user_id and session_id, and since itemInSession is included in the primary key, the results will be sorted by itemInSession.\n",
+    "- We will also include artist, song and user firstname, lastname to provide the full context"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create Table"
    ]
   },
   {
@@ -351,29 +349,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
-    "## for userid = 10, sessionid = 182\n",
     "query = \"CREATE TABLE IF NOT EXISTS event_by_user_session \"\n",
     "query = query + \"(user_id int, session_id int, itemInSession int, artist text, song text, first_name text, last_name text, PRIMARY KEY ((user_id, session_id), itemInSession))\"\n",
     "\n",
     "try:\n",
     "    session.execute(query)\n",
     "except Exception as e:\n",
-    "    print(e)\n",
-    "\n",
-    "\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Insert Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
     "        query = \"INSERT INTO event_by_user_session (user_id, session_id, itemInSession, artist, song, first_name, last_name)\"\n",
     "        query = query + \" VALUES (%s, %s, %s, %s, %s, %s, %s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
+    "        ### the index is based on the position of the columns\n",
     "        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4]))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query and Print the data"
    ]
   },
   {
@@ -393,8 +409,6 @@
     }
    ],
    "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
-    "## for userid = 10, sessionid = 182\n",
     "query = \"SELECT artist, song, first_name, last_name FROM event_by_user_session WHERE user_id = 10 AND session_id = 182 ORDER BY itemInSession;\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
@@ -406,33 +420,75 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 3\n",
+    "Give every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "\n",
+    "### Answer \n",
+    "- For this question, we want to retrieve data based on the filtering condition for the song.\n",
+    "- We create a new table called event_by_song.\n",
+    "- The primary key is defined as (song, user_id). This choice allows us to filter data based on the song, and the user_id is included to make the primary key unique.\n",
+    "- Also, since we are not filtering by session-related attributes in this query, we don't include them in the primary key. This design allows efficient querying based on the song attribute.\n",
+    "- We include user_id, song, first_name, last_name columns to provide the full context\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create the table"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "query = \"CREATE TABLE IF NOT EXISTS event_by_songs \"\n",
     "query = query + \"(song text, user_id int, first_name text, last_name text, PRIMARY KEY (song, user_id))\"\n",
     "\n",
     "try:\n",
     "    session.execute(query)\n",
     "except Exception as e:\n",
-    "    print(e)\n",
-    "\n",
-    "\n",
+    "    print(e)      "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Insert the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
     "        query = \"INSERT INTO event_by_songs (song, user_id, first_name, last_name)\"\n",
     "        query = query + \" VALUES (%s, %s, %s, %s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[9], int(line[10]), line[1], line[4]))        "
+    "        session.execute(query, (line[9], int(line[10]), line[1], line[4]))  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query the data"
    ]
   },
   {
@@ -451,7 +507,6 @@
     }
    ],
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "query = \"SELECT first_name, last_name FROM event_by_songs WHERE song = 'All Hands Against His Own';\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
@@ -463,19 +518,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Drop the tables before closing out the sessions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## TO-DO: Drop the table before closing out the sessions"
    ]
   },
   {
@@ -518,6 +565,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
